--- a/MCTS.ipynb
+++ b/MCTS.ipynb
@@ -81,11 +81,12 @@
       "cell_type": "code",
       "source": [
         "!pip install setuptools==65.5.0\n",
-        "!pip install gym==0.21.0\n",
+        "!pip install \"git+https://github.com/Pythoniasm/gym-fork.git@fix-v0.21.0\"\n",
+        "#!pip install gym==0.21\n",
         "!pip install pyglet==1.5.11"
       ],
       "metadata": {
-        "id": "44aPSOz4ZEbw"
+        "id": "QCzSQy_Bj8Q1"
       },
       "execution_count": null,
       "outputs": []
@@ -221,7 +222,7 @@
       "cell_type": "code",
       "source": [
         "v = gym.__version__\n",
-        "assert v == '0.21.0'"
+        "assert v == '0.21.1'"
       ],
       "metadata": {
         "id": "gkRR8ocdZTaI"
